--- a/delivery.html
+++ b/delivery.html
@@ -23,31 +23,53 @@ body{margin:0;background:#eef2f7}
  width:44px;height:44px;border-radius:50%;
  font-size:20px;cursor:pointer
 }
+
 .card{
  background:#fff;margin-top:14px;padding:14px;
  border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)
 }
-.order{display:flex;gap:12px;margin-top:12px}
-.order img{width:90px;height:80px;object-fit:cover;border-radius:10px}
+
+.order{
+ display:flex;gap:12px;margin-top:12px
+}
+.order img{
+ width:90px;height:80px;object-fit:cover;border-radius:10px
+}
 
 .badge{
  padding:4px 10px;border-radius:20px;
  font-size:12px;display:inline-block
 }
-.blue{background:#e0f2fe;color:#075985}
 .green{background:#dcfce7;color:#166534}
+.blue{background:#e0f2fe;color:#075985}
 
 .btn{
+ display:inline-flex;align-items:center;gap:6px;
  padding:8px 14px;border:none;border-radius:10px;
  cursor:pointer;margin-top:8px;font-size:13px
 }
 .accept{background:#16a34a;color:#fff}
 .pickup{background:#f59e0b;color:#fff}
 .done{background:#2563eb;color:#fff}
+
+/* PROFILE MODAL */
+.modal{
+ position:fixed;inset:0;background:rgba(0,0,0,.5);
+ display:none;align-items:center;justify-content:center;z-index:20
+}
+.modal-box{
+ background:#fff;width:92%;max-width:420px;
+ border-radius:16px;padding:20px
+}
+.modal-box input,select{
+ width:100%;padding:10px;margin:8px 0;
+ border-radius:10px;border:1px solid #ccc
+}
 </style>
 </head>
 
 <body>
+
 <div class="main">
 
 <!-- HEADER -->
@@ -69,6 +91,25 @@ body{margin:0;background:#eef2f7}
 
 </div>
 
+<!-- PROFILE -->
+<div class="modal" id="profileModal">
+ <div class="modal-box">
+  <h3>👤 Delivery Profile</h3>
+  <input id="pName" placeholder="Full Name">
+  <input id="pMobile" placeholder="Mobile Number">
+  <select id="pVehicle">
+   <option value="">Vehicle Type</option>
+   <option value="two_wheeler">Two Wheeler</option>
+   <option value="three_wheeler">Three Wheeler</option>
+   <option value="four_wheeler">Four Wheeler</option>
+  </select>
+  <input id="pVehicleNo" placeholder="Vehicle Number">
+  <input id="pCity" placeholder="City">
+  <button class="btn accept" onclick="saveProfile()">Save Profile</button>
+  <button class="btn" onclick="closeProfile()">Close</button>
+ </div>
+</div>
+
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
 const DBID=localStorage.getItem("userId");
@@ -76,16 +117,40 @@ const TOKEN=localStorage.getItem("token");
 
 dbId.innerText = DBID ? DBID.slice(0,8).toUpperCase() : "N/A";
 
+/* PROFILE */
+function openProfile(){
+ profileModal.style.display="flex";
+ const p=JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");
+ pName.value=p.name||"";
+ pMobile.value=p.mobile||"";
+ pVehicle.value=p.vehicle||"";
+ pVehicleNo.value=p.vehicleNo||"";
+ pCity.value=p.city||"";
+}
+function saveProfile(){
+ const p={
+  name:pName.value,
+  mobile:pMobile.value,
+  vehicle:pVehicle.value,
+  vehicleNo:pVehicleNo.value,
+  city:pCity.value
+ };
+ localStorage.setItem("deliveryProfile_"+DBID,JSON.stringify(p));
+ alert("Profile Saved ✅");
+ closeProfile();
+}
+function closeProfile(){profileModal.style.display="none";}
+
 /* LOAD ORDERS */
 async function loadOrders(){
- const res = await fetch(`${API}/api/orders/delivery/${DBID}`,{
-  headers:{ "Authorization":"Bearer "+TOKEN }
+ const res=await fetch(`${API}/api/orders/delivery/${DBID}`,{
+  headers:{Authorization:"Bearer "+TOKEN}
  });
- const data = await res.json();
- renderOrders(data.orders || []);
+ const data=await res.json();
+ renderOrders(data.orders||[]);
 }
 
-/* RENDER ORDERS */
+/* RENDER */
 function renderOrders(list){
  if(!list.length){
   orders.innerHTML="<p style='text-align:center'>No Orders</p>";
@@ -98,28 +163,29 @@ function renderOrders(list){
   <div style="flex:1">
    <b>${o.productName}</b> ₹${o.price}<br><br>
 
-   🏪 ${o.wholesalerName}<br>
-   📞 ${o.wholesalerMobile}<br><br>
+   🏪 <b>${o.wholesalerName}</b><br>
+   📞 ${o.wholesalerMobile||"N/A"}<br>
+   🏠 ${o.wholesalerAddress||"Address not available"}<br><br>
 
-   🏬 ${o.retailerName}<br>
-   📞 ${o.retailerMobile}<br><br>
+   🏬 <b>${o.retailerName}</b><br>
+   📞 ${o.retailerMobile||"N/A"}<br>
+   🏠 ${o.retailerAddress||"Address not available"}<br><br>
 
+   🚚 Vehicle: ${o.vehicleType}<br>
    <span class="badge blue">${o.status}</span><br>
 
    ${o.status==="confirmed_by_wholesaler"
-     ? `<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>` : ""}
+     ? `<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>`:""}
 
    ${o.status==="delivery_accepted"
-     ? `<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>` : ""}
+     ? `<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>`:""}
 
-   ${o.status==="picked_up"
-     ? `<button class="btn done" onclick="generateCode('${o._id}')">Delivered</button>` : ""}
-
-   ${o.status==="delivery_code_generated"
-     ? `<button class="btn done" onclick="verifyCode('${o._id}')">Enter Code</button>` : ""}
+   ${(o.status==="picked_up"||o.status==="delivery_code_generated")
+     ? `<button class="btn done" onclick="deliverFlow('${o._id}','${o.status}')">
+        Delivered
+       </button>`:""}
   </div>
- </div>
- `).join("");
+ </div>`).join("");
 }
 
 /* ACTIONS */
@@ -127,7 +193,10 @@ async function acceptOrder(id){
  const p=JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");
  await fetch(`${API}/api/orders/${id}/delivery-accept`,{
   method:"POST",
-  headers:{ "Content-Type":"application/json","Authorization":"Bearer "+TOKEN },
+  headers:{
+   "Content-Type":"application/json",
+   "Authorization":"Bearer "+TOKEN
+  },
   body:JSON.stringify({
    deliveryBoyId:DBID,
    deliveryBoyName:p.name||"Delivery Partner",
@@ -142,29 +211,36 @@ async function pickupOrder(id){
  loadOrders();
 }
 
-async function generateCode(id){
- await fetch(`${API}/api/orders/generate-delivery-code/${id}`,{method:"POST"});
- alert("Code generated. Ask retailer for code.");
- loadOrders();
-}
+/* DELIVERY CODE FLOW */
+async function deliverFlow(orderId,status){
 
-async function verifyCode(id){
- const code=prompt("Enter delivery code");
- if(!code) return;
+ if(status==="picked_up"){
+  await fetch(`${API}/api/orders/generate-delivery-code/${orderId}`,{
+   method:"POST"
+  });
+  alert("Delivery code generated. Ask retailer for code.");
+  loadOrders();
+  return;
+ }
 
- const res=await fetch(`${API}/api/orders/verify-delivery-code/${id}`,{
-  method:"POST",
-  headers:{ "Content-Type":"application/json" },
-  body:JSON.stringify({code})
- });
- const data=await res.json();
+ if(status==="delivery_code_generated"){
+  const code=prompt("Enter Delivery Code");
+  if(!code) return;
 
- data.success ? alert("Delivered ✅") : alert("Wrong Code ❌");
- loadOrders();
+  const res=await fetch(`${API}/api/orders/verify-delivery-code/${orderId}`,{
+   method:"POST",
+   headers:{"Content-Type":"application/json"},
+   body:JSON.stringify({code})
+  });
+  const data=await res.json();
+  data.success ? alert("Delivered Successfully ✅") : alert("Wrong Code ❌");
+  loadOrders();
+ }
 }
 
 loadOrders();
 setInterval(loadOrders,8000);
 </script>
+
 </body>
 </html>
